# ai-sdk-llama-cpp

./: .clang-format  .gitignore  .gitmodules  .prettierignore  AGENT.md  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  pnpm-lock.yaml  vitest.config.ts
.changeset/: config.json  shaky-turkeys-chew.md
.github/workflows/: format.yml  pull_request_template.md  typecheck.yml  unit-test.yml
examples/: chatbot.ts  embedding-example.ts  generate-example.ts  generate-text-output.ts  generate-text.ts  stream-example.ts  stream-text.ts  structured-output-example.ts
examples/basic/: chatbot.ts  embed-many.ts  generate-text-output.ts  generate-text.ts  package.json  stream-text.ts  tsconfig.json
examples/basic/src/: chatbot.ts  embed-many.ts  generate-text-tool-call.ts  generate-text.ts  stream-text-tool-call.ts  tool-call.ts
native/: CMakeLists.txt  binding.cpp  llama-wrapper.cpp  llama-wrapper.h
scripts/: postinstall.cjs  postinstall.js
src/: index.ts  json-schema-to-grammar.ts  llama-cpp-embedding-model.ts  llama-cpp-language-model.ts  llama-cpp-provider.ts  native-binding.ts
tests/: setup.ts
tests/e2e/: embedding.test.ts  generation.test.ts  package.json  structured-output.test.ts  tsconfig.json  vitest.config.ts
tests/e2e/src/: structured-output.test.ts  tool-calling.test.ts
tests/integration/: language-model.test.ts
tests/unit/: converters.test.ts  format-prompt.test.ts  json-schema-to-grammar.test.ts  provider.test.ts
